--- a/src/vercel.json
+++ b/src/vercel.json
@@ -9,7 +9,15 @@
       }
     }
   ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/index.html",
+      "status": 200
+    }
+  ],
   "installCommand": "npm install",
   "buildCommand": "npm run build",
   "outputDirectory": "dist"
 }
+
