--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "url": "https://final-tact-frontend-c2pcm3q9k-david-bamgbades-projects.vercel.app",
+  "url": "https://liquidtoken.vercel.app",
   "name": "LiquidToken",
   "iconUrl": "https://ibb.co/wNKmPT0j"
 }
