--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@tonconnect/ui-react": "^2.0.12",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
+    "@types/react-router-dom": "^5.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^7.4.1",
     "vite-plugin-node-polyfills": "^0.23.0"
   },
   "devDependencies": {
