updated manifest.json file

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "url": "https://bumpy-zoos-grin.loca.lt",
+  "url": "https://deploy-ton-project.vercel.app",
   "name": "LiquidToken",
   "iconUrl": "https://ibb.co/wNKmPT0j"
 }
